--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -30,5 +30,5 @@ jobs:
           echo "|${{ env.slide }}|-|-|[link](https://guisso.dev/talks/${{ env.slide }}/)|" >> README.md
       - name: Commit README changes
         use: stefanzweifel/git-auto-commit-action@v4
-        commit_message: readme: add ${{ env.slide }} link
+        commit_message: "readme: add ${{ env.slide }} link"
         file_pattern: README.md
