--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
+  "name": "talks",
   "private": true,
   "scripts": {
-    "dev": "slidev --open",
     "build": "slidev build",
+    "dev": "slidev --open",
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.22.1",
+    "@slidev/cli": "^0.36.10",
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "*"
-  },
-  "name": "talks-test"
+  }
 }
